<resources>
    <string name="app_name" translatable="false">Martp</string>
    <string name="gallery">Gallery</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_user">Profile</string>
    <string name="menu_info">About</string>
    <string name="create_new_art">Create new art</string>
    <string name="error_executing_operation_in_the_local_database">Error executing operation in the local database</string>
    <string name="gallery_empty_state_state_message">It seems like you don’t have any art yet 😔\nClick the button below and start your gallery!</string>
    <string name="try_again">Try again</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="we_need_your_location_to_create_art_with_you">We need to access your location\n to create art with you</string>
    <string name="location_usage_details">Your location is used to help us generate your art. We never store or share your location with anyone. Martp is an open source project, if you need more information about it, just check out  our project on Github.</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="choose_a_title_for_you_map_art">Choose a title for your new map art</string>
    <string name="add_a_description_for_you_map_art">Add a description to your map art</string>
    <string name="save_art">Save art</string>
    <string name="unknown_error_failure">An unknown error occurred. Please try again.</string>
    <string name="location_permission_not_granted_failure_error">To proceed with this action, you need to grant access to your location.</string>
    <string name="this_is_your_new_art">This is your new art!</string>
    <string name="we_are_generating_your_art">We are generating your art…</string>
    <string name="no_internet_connection_failure_message">It seems like you don\'t have internet connection to complete this action. Check your phone connection and try again.</string>
    <string name="share_art_message">I created this interactive art with my location using Martp. Discover the project by downloading the app and create your own art too!!</string>
    <string name="art_title_hint_botanical_garden">Botanical garden</string>
    <string name="art_title_hint_city_center">City center</string>
    <string name="art_title_hint_grandma_house">My grandma\'s house</string>
    <string name="art_description_hint_beautiful_place">A very beautiful place, I wanted to record it</string>
    <string name="art_description_hint_crazy_streets">The streets here were crazy, the art turned out really good</string>
    <string name="art_description_hint_special_place">A very special place for me during the trip</string>
    <string name="martp_info_description">Martp is an interactive art generator that uses geolocation as a user interaction interface. It is an open-source and educational project developed at the Federal University of Bahia by student Manoel Ribeiro. \nTo learn more about the project, you can contact me on LinkedIn, visit my GitHub, or check out the project repository.</string>
    <string name="review_on_play_store">Review on Play Store</string>
    <string name="back">Back</string>
    <string name="share_without_saving">Share without saving</string>
    <string name="choose_art_style_title">Choose your art style</string>
    <string name="martp_default">Martp Default</string>
    <string name="martp_default_description">The first art style ever created; it existed even before the app. It keeps the map’s shape and only applies colors. It’s great for seeing street patterns in different places.</string>
    <string name="pointillism">Pointillism</string>
    <string name="pointillism_description">Pointillism is a painting technique where small, distinct dots of pure color are applied in patterns to form an image. It is more abstract but still preserves a little of the shape of the streets.</string>
    <string name="choose_art_style_description">Styles will define whether your art will look closer to a regular map or something more abstract. You can choose to use an artistic movement such as pointillism or even select styles to highlight places crossed by rivers.</string>
    <string name="location_not_enabled_error">To create a map art, you need to enable location in the settings.</string>
    <string name="ai_powered">AI Powered</string>
    <string name="generate_ai_content_failure_message">An error occurred while generating the description of your art with Artificial Intelligence.</string>
    <string name="your_gallery">Your Gallery</string>
    <string name="create_description_with_ai">Create description with AI</string>
    <string name="thinking">Thinking…</string>
    <string name="digital_exposition">Digital Exposition</string>
    <string name="digital_exposition_description">Every art created on Martp is sent to our digital exposition — a shared gallery where everyone can explore the creativity of our community. If you want your name alongside your art, fill in the fields below.</string>
    <string name="email_not_mandatory_hint">Not mandatory! The only downside is that I won\'t be able to contact you if I really like your art :)</string>
    <string name="save_my_info">Save my info</string>
    <string name="username" translatable="false">Username</string>
    <string name="email_optional_hint">Email (optional)</string>
    <string name="name_or_nickname_hint">Your name or nickname</string>
    <string name="name_suggestion_hint">Give yourself an artistic name or even use your social media username</string>
    <string name="art_settings">Art Settings</string>
    <string name="customize_next_art">Customize how your next art will look</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="far">Far</string>
    <string name="art_style">Art Style</string>
    <string name="choose_visual_style">Choose the visual style for your generated art</string>
    <string name="color_palette">Color Palette</string>
    <string name="choose_complete_color_set">Choose a complete color set for your art</string>
    <string name="map_zoom">Map Zoom</string>
    <string name="control_map_zoom">Control how close or far the map view will be</string>
    <string name="colorful_map">Colorful Map</string>
    <string name="colorful_map_description">A colourful map rendered in the colours you chose</string>
    <string name="pointillism_colorful_description">A colourful map, but with Dot-pattern artistic rendering</string>
    <string name="geo_realistic">Geo Realistic</string>
    <string name="geo_realistic_description">A quick way to get a satellite image of your current location</string>
    <string name="water_flow">Water Flow</string>
    <string name="water_flow_description">An animated map that focuses on showing the flow of any water that appears on your map</string>
    <string name="walking_people">Walking People</string>
    <string name="walking_people_description">A colorful map with a simulation of people walking in the building areas</string>
</resources>