<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_l5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/locationImageIV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_my_location"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Text.ScreenTitle"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/we_need_your_location_to_create_art_with_you" />


    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        style="@style/Text.MiddleScreenInfoText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/location_usage_details" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <manoellribeiro.dev.martp.core.components.MartpButton
        android:id="@+id/allowLocationAccessMB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/allow_location_access"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:cornerRadius="50dp"
        style="@style/MartpButton.Primary"/>

</LinearLayout>