<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"

        android:orientation="vertical"
        android:background="@color/light_l5"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <TextView
                android:id="@+id/titleTV"
                tools:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/Text.ScreenTitle"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/create_new_art" />

        </RelativeLayout>

        <FrameLayout android:id="@+id/mapArtsContainer"
            android:background="@color/dark_d5"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            tools:visibility="visible"
            android:layout_height="200dp" >

            <ProgressBar
                android:id="@+id/loadingIndicatorPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.GenerateMapArts.ProgressBarTheme"
                android:layout_gravity="center"/>

        </FrameLayout>

        <Space
            android:id="@+id/stateErrorS"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <ImageView
            android:id="@+id/errorImageIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="56dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_error_general"/>

        <TextView
            android:id="@+id/errorTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            style="@style/Text.MiddleScreenInfoText"
            tools:text="It seems like something wrong happened. Please try again" />

        <TextView
            android:id="@+id/cityCountryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Title"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/mapArtsContainer"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Salvador - Casa" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/artTitleTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Text.GraySubTitle"
            android:layout_marginHorizontal="16dp"
            tools:text="Uma arte criada a partir da minha casa easdasdasdasdasdadadadsadam salvador no politeama" />

        <LinearLayout
            android:id="@+id/aiPoweredLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_ai_powerade_label"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_darker"
                android:textSize="10sp"
                android:fontFamily="@font/nunito_extra_bold"
                android:layout_gravity="center_vertical"
                android:text="@string/ai_powered"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_ai_powerade"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <manoellribeiro.dev.martp.core.components.MartpButton
            android:id="@+id/actionMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/save_art"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cornerRadius="50dp"
            app:isEnabled="false"
            android:clickable="false"
            style="@style/MartpButton.Primary"/>

    </LinearLayout>

</ScrollView>

